Perfundimi i faqes kryesore
Perfundimi i pjeses se footer

--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
     <title>Preventiva</title>
     <link rel="stylesheet" href="Home.css">
     <link rel="stylesheet" href="Header.css">
+    <link rel="stylesheet" href="Footer.css">
 </head>
 <body>
     <div class="header">
@@ -24,12 +25,26 @@
             <h1 class="titujt">Inovacioni</h1>
             <h1 class="titujt">Bioteknik</h1>
             <h1  class="titujt">Global</h1>
-            <br>
+            <br><br>
             <p>Prezantimi i inovacionit për të shpëtuar
             dhe përmirësuar jetë</p>
-            
+            <br><br>
+            <a href="#"><button>Rreth kompanisë</button></a>
     </div>
-
+    <footer>
+       <div> <p>E drejta e autorit ©2023</p></div>
+        <div>
+            <ul class="footerlist">
+               <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
+               <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
+                <a href="#" class="footerunderline"> <li class="listelements">Kushtet e Përdorimit</li></a>
+                <a href="#" class="footerunderline"> <li class="listelements">Cookies</li></a>
+            </ul>
+        </div>
+        <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
+    </footer>
+    
 
 </body>
+
 </html>
