--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
             <ul class="lista">
                 <li><a href="#" class="underline">Kryesore</a></li>
                 <li><a href="#" class="underline">Rreth nesh</a></li>
-                <li><a href="#" class="underline">Produktet</a></li>
+                <li><a href="Produktet.html" class="underline">Produktet</a></li>
             </ul>
         </div>
     </div>
