Fshirja e nje file te tepert
"hader" ishte nje file i krijuar teper

--- a/contact us.html
+++ b/contact us.html
@@ -11,7 +11,7 @@
         <div class="kontakti">
             <ul class="lista">
                 <link rel="stylesheet" href="contact us.css">
-                <link rel="stylesheet" href="hader.css">
+                <link rel="stylesheet" href="Header.css">
                 <li><a href="#" class="underline">Kryesore</a></li>
                 <li><a href="#" class="underline">Contact us</a></li>
                 <li><a href="Produktet.html" class="underline">Produktet</a></li>
