--- a/login.html
+++ b/login.html
@@ -3,22 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
+    <link rel="stylesheet" href="LoginStyle.css">
 </head>
 <body>
-    <div class="login-container">
+    <div class="main">
         <h2>Login</h2>
-        <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-
-            <button type="submit">Login</button>
-            <br>
-            <p>Don't have an account <br> <br> <a href="contact us.html">Sign up</a></p>
+        <form onsubmit="return validateLoginForm()">
+          <div class="input">
+            <input type="text" placeholder="Enter your email" id="email" required>
+          </div>
+          <div class="input">
+            <input type="password" placeholder="Enter your password" id="password" required>
+          </div>
+          <div class="input button">
+            <input type="submit" value="Login">
+          </div>
+          <div class="text">
+            <h3>Doesn't have an account? <a href="register.html">Register now</a></h3>
+          </div>
         </form>
-
+      </div>
     </div>
     
+    <script>
+      function validateLoginForm() {
+        var email = document.getElementById('email').value;
+        var password = document.getElementById('password').value;
+
+        var emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        if (!emailRegex.test(email)) {
+          alert('Please enter a valid email address');
+          return false;
+        }
+
+        if (password.length<6) {
+          alert('Please enter a valid password');
+          return false;
+        }
+
+        return true;
+      }
+    </script>
 </body>
 </html>
