Perfundimi i about us
Perfundimi dhe validimi me js

--- a/Home.html
+++ b/Home.html
@@ -14,8 +14,8 @@
         <div class="kontakti">
             <ul class="lista">
                 <li><a href="#" class="underline">Kryesore</a></li>
-                <li><a href="#" class="underline">Rreth nesh</a></li>
                 <li><a href="Produktet.html" class="underline">Produktet</a></li>
+                <li><a href="About us.html" class="underline">Rreth nesh</a></li>
             </ul>
         </div>
     </div>
@@ -29,20 +29,20 @@
             <p>Prezantimi i inovacionit për të shpëtuar
             dhe përmirësuar jetë</p>
             <br><br>
-            <a href="#"><button>Rreth kompanisë</button></a>
+            <a href="About us.html"><button>Rreth kompanisë</button></a>
     </div>
     <footer>
-       <div> <p>E drejta e autorit ©2023</p></div>
-        <div>
-            <ul class="footerlist">
-               <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
-               <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
-                <a href="#" class="footerunderline"> <li class="listelements">Kushtet e Përdorimit</li></a>
-                <a href="#" class="footerunderline"> <li class="listelements">Cookies</li></a>
-            </ul>
-        </div>
-        <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
-    </footer>
+        <div> <p>E drejta e autorit ©2023</p></div>
+         <div>
+             <ul class="footerlist">
+                <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
+                <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
+                 <a href="#" class="footerunderline"> <li class="listelements">Kushtet e Përdorimit</li></a>
+                 <a href="#" class="footerunderline"> <li class="listelements">Cookies</li></a>
+             </ul>
+         </div>
+         <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
+     </footer>
     
 
 </body>
