--- a/Produktet.html
+++ b/Produktet.html
@@ -15,8 +15,8 @@
         <div class="kontakti">
             <ul class="lista">
                 <li><a href="Home.html" class="underline">Kryesore</a></li>
-                <li><a href="#" class="underline">Rreth nesh</a></li>
                 <li><a href="#" class="underline">Produktet</a></li>
+                <li><a href="About us.html" class="underline">Rreth nesh</a></li>
             </ul>
         </div>
     </div>
@@ -40,7 +40,7 @@
     </div>
     <br><br><br>
 </div>
-<hr>
+
 <footer>
     <div> <p>E drejta e autorit ©2023</p></div>
      <div>
