--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <input type="password" placeholder="Enter your password" id="password" required>
           </div>
           <div class="input button">
-            <input type="submit" value="Login">
+            <input type="submit">
           </div>
           <div class="text">
             <h3>Doesn't have an account? <a href="register.html">Register now</a></h3>
