--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
           <h3>I accept all terms & conditions</h3>
         </div>
         <div class="input button">
-          <input type="submit" value="Register Now">
+          <input type="submit">
         </div>
         <div class="text">
           <h3>Already have an account? <a href="login.html">Login now</a></h3>
