Perfundimi i pjeses se parë

--- a/About us.html
+++ b/About us.html
@@ -13,7 +13,7 @@
         <div class="kontakti">
             <ul class="lista">
                 <li><a href="Home.html" class="underline">Kryesore</a></li>
-                <li><a href="Produktet.html" class="underline">Produketet</a></li>
+                <li><a href="Produktet.html" class="underline">Produktet</a></li>
                 <li><a href="#" class="underline">Rreth nesh</a></li>
             </ul>
         </div>
