Slider dhe responsiviteti
Shtimi i slider ne pjesen e about us si dhe responsiviteti per screen te laptopit

--- a/About us.html
+++ b/About us.html
@@ -19,15 +19,18 @@
         </div>
     </div>
     <div class="a">
-    <div class="main">
-        <div class="teksti">
-            <h1 class="titulli">Zyret</h1>
-            <p>Zyrat tona dhe të partnerëve të Laboratorit 'Preventiva' janë të vendosura në Kosovë, Shqipëri, Gjermani dhe në Shtetet e Bashkuara të Amerikës.</p>
+        <div class="main">
+            <div class="teksti">
+                <h1 class="titulli">Zyret</h1>
+                <p>Zyrat tona dhe të partnerëve të Laboratorit 'Preventiva' janë të vendosura në Kosovë, Shqipëri, Gjermani dhe në Shtetet e Bashkuara të Amerikës.</p>
+            </div>
+            <div class="foto">
+                <img src="zyret.png" alt="Zyret" class="zyra" id="sliderImage">
+                <button onclick="ndryshoFoto()" style="border-radius: 50%;border: 0px;background-color: lightblue;"><img src="arrow.png" alt="" class="arrow"></button>
+            </div>
         </div>
-        <div class="foto"><img src="zyret.png" alt="Zyret" class="zyra"></div>
-
     </div>
-</div>
+    
 <div class="b">
     <div class="main">
         <div class="teksti">
@@ -50,27 +53,38 @@
 </div>
 
 
-
-
-
-
-
-<footer>
-    <div> <p>E drejta e autorit ©2023</p></div>
-     <div>
-         <ul class="footerlist">
-            <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
-            <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
-             <a href="#" class="footerunderline"> <li class="listelements">Kushtet e Përdorimit</li></a>
-             <a href="#" class="footerunderline"> <li class="listelements">Cookies</li></a>
-         </ul>
-     </div>
-     <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
- </footer>
+  <footer>
+        <div class="fundi"> <p>E drejta e autorit ©2023</p></div>
+         <div class="asd">
+             <ul class="footerlist">
+                <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
+                <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
+                 <a href="#" class="footerunderline"> <li class="listelements">Kushtet e Përdorimit</li></a>
+                 <a href="#" class="footerunderline"> <li class="listelements">Cookies</li></a>
+             </ul>
+         </div>
+         <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
+     </footer>y
 
 
  <script>
+
+let fotoIndex = 1;
+let fotoArray = ["zyret.png", "zyret2.png","zyret3.png"];
+
+function ndryshoFoto() {
+    document.getElementById("sliderImage").src = fotoArray[fotoIndex];
+    fotoIndex++;
+    
+    if (fotoIndex >= fotoArray.length) {
+        fotoIndex = 0;
+    }
+}
+
+
+
 function validateContactForm() {
+
         var emri = document.getElementById('emri').value; 
         var mbiemri = document.getElementById('mbiemri').value;
         var email = document.getElementById('email').value;
