--- a/Home.html
+++ b/Home.html
@@ -30,10 +30,12 @@
             dhe përmirësuar jetë</p>
             <br><br>
             <a href="About us.html"><button>Rreth kompanisë</button></a>
+            <a href="login.html"><button style="margin-top: 10px;">Kyqu</button></a>
+
     </div>
     <footer>
-        <div> <p>E drejta e autorit ©2023</p></div>
-         <div>
+        <div class="fundi"> <p>E drejta e autorit ©2023</p></div>
+         <div class="asd">
              <ul class="footerlist">
                 <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
                 <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
