--- a/Produktet.html
+++ b/Produktet.html
@@ -43,7 +43,7 @@
 
 <footer>
     <div> <p>E drejta e autorit ©2023</p></div>
-     <div>
+     <div class="asd">
          <ul class="footerlist">
             <a href="#" class="footerunderline"> <li class="listelements">Politika e mbrojtjes së të dhënave</li></a>
             <a href="#" class="footerunderline">  <li class="listelements">Marrëveshja e përdoruesit</li></a>
