--- a/About us.html
+++ b/About us.html
@@ -64,7 +64,7 @@
              </ul>
          </div>
          <div> <a href="https://www.linkedin.com/"><img src="LI-Logo.png" alt="Linkedin Logo" class="linkedin"></a></div>
-     </footer>y
+     </footer>
 
 
  <script>
