--- a/Home.html
+++ b/Home.html
@@ -16,6 +16,8 @@
                 <li><a href="#" class="underline">Kryesore</a></li>
                 <li><a href="Produktet.html" class="underline">Produktet</a></li>
                 <li><a href="About us.html" class="underline">Rreth nesh</a></li>
+                <li><a href="lajme.html" class="underline">Lajme</a></li>
+                <li><a href="Kontakti.html" class="underline">Kontakti</a></li>
             </ul>
         </div>
     </div>
