--- a/Produktet.html
+++ b/Produktet.html
@@ -17,6 +17,8 @@
                 <li><a href="Home.html" class="underline">Kryesore</a></li>
                 <li><a href="#" class="underline">Produktet</a></li>
                 <li><a href="About us.html" class="underline">Rreth nesh</a></li>
+                <li><a href="lajme.html" class="underline">Lajme</a></li>
+                <li><a href="Kontakti.html" class="underline">Kontakti</a></li>
             </ul>
         </div>
     </div>
