--- a/lajme.html
+++ b/lajme.html
@@ -19,6 +19,7 @@
                 <li><a href="Produktet.html" class="underline">Produktet</a></li>
                 <li><a href="About us.html" class="underline">Rreth nesh</a></li>
                 <li><a href="#" class="underline">Lajme</a></li>
+                <li><a href="Kontakti.html" class="underline">Kontakti</a></li>
             </ul>
         </div>
     </div> 
