--- a/Home.html
+++ b/Home.html
@@ -13,9 +13,9 @@
         <div class="logo"><a href="#"><img src="logo.png" alt="Logo" class="foto1"></a></div>
         <div class="kontakti">
             <ul class="lista">
-                <li><a href="Produktet.html" class="underline">Produktet</a></li>
+                <li><a href="Produktet.php" class="underline">Produktet</a></li>
                 <li><a href="lajme.html" class="underline">Lajme</a></li>
-                <li><a href="Kontakti.html" class="underline">Kontakti</a></li>
+                <li><a href="Kontakti.php" class="underline">Kontakti</a></li>
             </ul>
         </div>
     </div>
